# SoftRenderer

./: CMakeLists.txt  README.md  copy.bat  output.tga  readme.md
include/: BlendState.h  ConstantBuffer.h  Core.h  Device.h  DeviceContext.h  IBuffer.h  IPixelShader.h  IVertexShader.h  InputLayout.h  RenderTargetView.h  SRBlendState.h  SRCore.h  SRCoreAPI.h  SRDepthStencilView.h  SRDeviceContext.h  SRIBuffer.h  SRIVertexShader.h  SRInputLayout.h  SRRenderTargetView.h  SRSamplerState.h  SRTexture2D.h  SamplerState.h  ShaderInput.h  Texture2D.h  Utils.h
lib/TBBlib/ia32/: tbb_debug.lib  tbbbind_2_0.lib  tbbbind_2_0_debug.lib  tbbbind_2_5_debug.lib  tbbbind_debug.lib
lib/TBBlib/ia32/vc14/: tbb.lib  tbbbind.lib  tbbbind_2_5.lib  tbbmalloc.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib
lib/TBBlib/ia32/vc14_uwp/: tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib
lib/TBBlib/intel64/: tbbbind_2_5_debug.lib  tbbbind_debug.lib
lib/TBBlib/intel64/vc14/: tbb_debug.lib  tbbbind_2_0_debug.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib
lib/TBBlib/intel64/vc14_uwp/: tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib
lib/TBBlib/pkgconfig/: tbb.pc  tbb32.pc
output/: AlphaBlend.exp  AlphaBlend.lib  AlphaTest.exp  AlphaTest.lib  Bilinear.exp  Bilinear.lib  BlinnPhong.exp  BlinnPhong.lib  Core.exp  Core.ilk  Core.lib  MipMap.exp  MipMap.lib  PointLight.exp  PointLight.lib  SpotLight.exp  SpotLight.lib  StandardScene.exp  StandardScene.lib
output/bin_d/: AlphaBlend.exp  AlphaBlend.ilk  AlphaBlend.lib  AlphaTest.exp  AlphaTest.ilk  AlphaTest.lib  Bilinear.exp  Bilinear.ilk  Bilinear.lib  Core.exp  Core.ilk  Core.lib  Light.exp  Light.ilk  Light.lib  MipMap.exp  MipMap.ilk  MipMap.lib  PointLight.exp  PointLight.ilk  PointLight.lib  Renderer.exp  Renderer.ilk  Renderer.lib  SoftRenderer.exp  SoftRenderer.ilk  SoftRenderer.lib  assimp-vc141-mtd.lib
resource/Configure/: AlphaBlend.scene  AlphaTest.scene  Bilinear.scene  BlinnPhong.scene  MipMap.scene  PointLight.scene  SpotLight.scene  StandardScene.scene
src/: App.cpp  App.h  main.cpp
src/Casli/Configure/: AlphaBlend.scene  AlphaTest.scene  Bilinear.scene  BlinnPhong.scene  MipMap.scene  PointLight.scene  SpotLight.scene
src/Casli/Core/: BlendState.cpp  ConstantBuffer.cpp  Core.h  CoreAPI.h  DepthStencilView.cpp  DepthStencilView.h  Device.cpp  Device.h  DeviceContext.cpp  DeviceContext.h  IBuffer.cpp  IBuffer.h  IPixelShader.cpp  IPixelShader.h  IVertexShader.cpp  IVertexShader.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  RenderTargetView.cpp  RenderTargetView.h  Resource.h  SRBlendState.cpp  SRCore.h  SRDepthStencilView.cpp  SRDevice.cpp  SRDevice.h  SRDeviceContext.cpp  SRDeviceContext.h  SRIBuffer.cpp  SRIBuffer.h  SRIPixelShader.cpp  SRIPixelShader.h  SRIVertexShader.cpp  SRInputLayout.cpp  SRRenderTargetView.cpp  SRRenderTargetView.h  SRSamplerState.cpp  SRShaderInput.h  (+10 more)
src/Casli/Drawable/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  SolidSphere.cpp  SolidSphere.h  Sphere.cpp  Sphere.h
src/Casli/Renderer/: Bindable.cpp  Bindable.h  Blender.cpp  Blender.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  DirectionalLight.cpp  DirectionalLight.h  Drawable.cpp  Drawable.h  Graphics.cpp  Graphics.h  IndexBuffer.h  LambertPixelShader.h  LambertVertexShader.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PixelConstantBuffer.cpp  PixelConstantBuffer.h  PointLight.cpp  PointLight.h  RendererAPI.h  Sampler.cpp  Sampler.h  SceneParse.cpp  SceneParse.h  SpotLight.cpp  Texture.cpp  Texture.h  Tools.cpp  Tools.h  Vertex.cpp  Vertex.h  VertexBuffer.h  VertexConstantBuffer.cpp  (+1 more)
src/Casli/Renderer/Bindable/: BRenderState.cpp  BRenderState.h  Bindable.cpp  Bindable.h  BindableFactory.cpp  BindableFactory.h  Blender.cpp  Blender.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelConstantBuffer.cpp  PixelConstantBuffer.h  PixelShader.cpp  PixelShader.h  RENDERSTATE.CPP  RenderState.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCbuf.cpp  TransformCbuf.h  VertexBuffer.cpp  VertexBuffer.h  VertexConstantBuffer.cpp  VertexConstantBuffer.h  VertexShader.cpp  VertexShader.h
src/Casli/Renderer/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Casli/Scene/: App.cpp  App.h  Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  LambertPixelShader.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Casli/Scene/AlphaBlend/: App.cpp  App.h
src/Casli/Scene/AlphaTest/: App.cpp  App.h
src/Casli/Scene/Bilinear/: App.cpp  App.h
src/Casli/Scene/BlinnPhong/: App.cpp  App.h
src/Casli/Scene/Light/: App.cpp  App.h
src/Casli/Scene/MipMap/: App.cpp  App.h
src/Casli/Scene/PointLight/: App.cpp  App.h
src/Casli/Scene/SpotLight/: App.cpp
src/Casli/Scene/StandardScene/: App.cpp  App.h  main.cpp
src/Casli/Scene/TestScene/: App.cpp  App.h
src/Casli/Shader/: AlphaBlendPS.h  AlphaBlendVS.h  AlphaTestPS.h  AlphaTestVS.h  BlinnPhongPS.h  BoardPS.h  LambertPS.h  LambertPixelShader.h  LambertVS.h  LambertVertexShader.h  PointLightPS.h  SampleTexturePS.h  SampleTextureVS.h  SolidPS.h  SolidVS.h  SpotLightPS.h
src/Casli/Test/: AlphaPlane.cpp  AlphaPlane.h  Box.cpp  Box.h  Plane.cpp  Plane.h  tgaimage.cpp  tgaimage.h
src/Platform/: CasliMath.h  CasliTimer.cpp  CasliTimer.h  CasliWin.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
